[project]
name = "homework-deployer"
version = "1.0.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "gitpython>=3.1.45",
    "pydantic>=2.11.9",
]

[dependency-groups]
dev = [
    "complexipy>=4.2.0",
    "coverage>=7.10.7",
    "flake8>=7.3.0",
    "mypy>=1.18.2",
    "pylint>=3.3.8",
]

[tool.complexipy]
paths = ["src", "tests"]
max-complexity-allowed = 10
quiet = false
sort = "asc"
details = "low"

[tool.complexipy.output]
json = true